--- a/single-hotel-page/index.html
+++ b/single-hotel-page/index.html
@@ -14,101 +14,34 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
-    <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
-      import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
-  
-      const firebaseConfig = {
-        apiKey: "AIzaSyCp2e7CNo83HwDx_HAVgY_IDh0_KW2Y0HI",
-        authDomain: "y-spot-e84ca.firebaseapp.com",
-        databaseURL: "https://y-spot-e84ca-default-rtdb.firebaseio.com",
-        projectId: "y-spot-e84ca",
-        storageBucket: "y-spot-e84ca.appspot.com",
-        messagingSenderId: "783996806068",
-        appId: "1:783996806068:web:298ca1ddb4dfb7e758c8e1",
-        measurementId: "G-TSH2JVYJHR"
-      };
-  
-      const app = initializeApp(firebaseConfig);
-      const auth = getAuth();
-  
-      window.onload = () => {
-        const userDetailsContainer = document.getElementById("userDetailsContainer");
-        const registerLink = document.getElementById("registerLink");
-        const loginLink = document.getElementById("loginLink");
-  
-        onAuthStateChanged(auth, (user) => {
-          if (user) {
-            userDetailsContainer.style.display = "block";
-            registerLink.style.display = "none";
-            loginLink.style.display = "none";
-            document.getElementById("userName").textContent = user.displayName || "User";
-          } else {
-            userDetailsContainer.style.display = "none";
-            registerLink.style.display = "block";
-            loginLink.style.display = "block";
-          }
-        });
-      };
-  
-      document.getElementById('logoutButton').addEventListener('click', function () {
-        signOut(auth).then(() => {
-          alert('Logged out successfully');
-          // Hide user details and show register and login links
-          document.getElementById("userDetailsContainer").style.display = "none";
-          document.getElementById("registerLink").style.display = "block";
-          document.getElementById("loginLink").style.display = "block";
-          // Redirect to login page or home page after logout
-          window.location.href = '../login/index.html';
-        }).catch((error) => {
-          console.error('Error logging out: ', error);
-          alert('Error logging out. Please try again.');
-        });
-      });
-    </script>
-  
+
+  <!-- javascript include function start  -->
   <script>
-    document.addEventListener("DOMContentLoaded", function() {
+    document.addEventListener("DOMContentLoaded", function () {
       const fetchContent = async (url) => {
         const response = await fetch(url);
         if (!response.ok) throw new Error('Network response was not ok');
         return response.text();
       };
-  
+
       const loadContent = async () => {
         try {
           const [headerData, footerData] = await Promise.all([
             fetchContent('../includes/confiremationheader.html'),
             fetchContent('../includes/insidefooter.html')
           ]);
-  
+
           document.getElementById('included-confiremationheader').innerHTML = headerData;
           document.getElementById('included-insidefooter').innerHTML = footerData;
         } catch (error) {
           console.error('Error fetching content:', error);
         }
       };
-  
+
       loadContent();
     });
   </script>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const urlParams = new URLSearchParams(window.location.search);
-      const location = urlParams.get('location');
-      const dates = urlParams.get('dates');
-      const guests = urlParams.get('guests');
-
-      document.getElementById('location').value = location;
-      document.getElementById('dates').value = dates;
-      document.getElementById('guests').value = guests;
-
-      const redirectLink = document.getElementById('redirectLink');
-      redirectLink.href = `../reservation-page/reservation.html?location=${encodeURIComponent(location)}&dates=${encodeURIComponent(dates)}&guests=${encodeURIComponent(guests)}`;
-    });
-  </script>
-
+  <!-- javascript include function end  -->
 </head>
 
 <body>
@@ -143,9 +76,9 @@
               <!-- Nav Item - User Information -->
               <li class="nav-item dropdown no-arrow" id="userDetailsContainer">
                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
+                  aria-haspopup="true" aria-expanded="false">
                   <span class="mr-2 d-none d-lg-inline text-gray-600 text-light" id="userName"></span>
-                  <img class="img-profile rounded-circle" src="img/undraw_profile.svg">
+                  <i class="fa-solid fa-user p-2 text-white fw-bold"></i>
                 </a>
                 <!-- Dropdown - User Information -->
                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in " aria-labelledby="userDropdown">
@@ -610,7 +543,7 @@
 
   </main>
   <footer class="footer pt-5 pt-5" style="margin-top: 40px;" id="included-insidefooter">
-    
+
   </footer>
   <!-- Bootstrap JavaScript Libraries -->
 
@@ -626,6 +559,77 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <!-- javascript function for username fetch and logout function and form data get function start  -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCp2e7CNo83HwDx_HAVgY_IDh0_KW2Y0HI",
+      authDomain: "y-spot-e84ca.firebaseapp.com",
+      databaseURL: "https://y-spot-e84ca-default-rtdb.firebaseio.com",
+      projectId: "y-spot-e84ca",
+      storageBucket: "y-spot-e84ca.appspot.com",
+      messagingSenderId: "783996806068",
+      appId: "1:783996806068:web:298ca1ddb4dfb7e758c8e1",
+      measurementId: "G-TSH2JVYJHR"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth();
+
+    window.onload = () => {
+      const userDetailsContainer = document.getElementById("userDetailsContainer");
+      const registerLink = document.getElementById("registerLink");
+      const loginLink = document.getElementById("loginLink");
+
+      onAuthStateChanged(auth, (user) => {
+        if (user) {
+          userDetailsContainer.style.display = "block";
+          registerLink.style.display = "none";
+          loginLink.style.display = "none";
+          document.getElementById("userName").textContent = user.displayName || "User";
+        } else {
+          userDetailsContainer.style.display = "none";
+          registerLink.style.display = "block";
+          loginLink.style.display = "block";
+        }
+      });
+    };
+
+    document.getElementById('logoutButton').addEventListener('click', function () {
+      signOut(auth).then(() => {
+        alert('Logged out successfully');
+        // Hide user details and show register and login links
+        document.getElementById("userDetailsContainer").style.display = "none";
+        document.getElementById("registerLink").style.display = "block";
+        document.getElementById("loginLink").style.display = "block";
+        // Redirect to login page or home page after logout
+        window.location.href = '../login/index.html';
+      }).catch((error) => {
+        console.error('Error logging out: ', error);
+        alert('Error logging out. Please try again.');
+      });
+    });
+  </script>
+
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const urlParams = new URLSearchParams(window.location.search);
+      const location = urlParams.get('location');
+      const dates = urlParams.get('dates');
+      const guests = urlParams.get('guests');
+
+      document.getElementById('location').value = location;
+      document.getElementById('dates').value = dates;
+      document.getElementById('guests').value = guests;
+
+      const redirectLink = document.getElementById('redirectLink');
+      redirectLink.href = `../reservation-page/reservation.html?location=${encodeURIComponent(location)}&dates=${encodeURIComponent(dates)}&guests=${encodeURIComponent(guests)}`;
+    });
+  </script>
+  <!-- javascript function for username fetch and logout function and form data get function end   -->
 </body>
 
 </html>
