--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
           </div>
           <div class="col-12 col-md-7 col-lg-4 d-flex justify-content-center align-items-center mt-2">
             <div class="d-flex justify-content-center align-items-center mx-auto ps-4 ms-2">
+              <a class="nav-link" href="./admin/Login/login.html">
+                <button  type="button" class="btn btn-light text-danger"
+                  style="height: 30px; display: flex; align-items: center; justify-content: center;">
+                  <b>Admin</b>
+                </button>
+              </a>
               <a class="nav-link" href="./login/signup.html" id="registerLink">
                 <button id="registerButton" type="button" class="btn btn-light text-danger"
                   style="height: 30px; display: flex; align-items: center; justify-content: center;">
