--- a/admin/Login/login.html
+++ b/admin/Login/login.html
@@ -63,7 +63,7 @@
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
-
+        const auth = firebase.auth();
         document.getElementById('login-form').addEventListener('submit', function(event) {
             event.preventDefault();
 
@@ -89,6 +89,11 @@
                     const errorMessage = error.message;
                     document.getElementById('error-message').textContent = errorMessage;
                 });
+        });
+        auth.onAuthStateChanged(user => {
+            if (user) {
+                window.location.href = '../index.html';
+            }
         });
     </script>
 </body>
