--- a/index.html
+++ b/index.html
@@ -582,62 +582,67 @@
   <footer class="footer pt-4">
     <div class="container">
       <div class="row">
-        <div class="col-md">
-          <h6><b>Help</b></h6>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white textdec small-link">FAQ</a></li>
-            <li><a href="#" class="text-white textdec small-link">Privacy policy</a></li>
-            <li><a href="#" class="text-white textdec small-link">Cookies privacy</a></li>
-            <li><a href="#" class="text-white textdec small-link">Terms of use</a></li>
-            <li><a href="#" class="text-white textdec small-link">Help centre</a></li>
-          </ul>
-        </div>
-        <div class="col-md">
-          <h6><b>Get the App</b></h6>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white textdec small-link">IOS app</a></li>
-            <li><a href="#" class="text-white textdec small-link">Android app</a></li>
-          </ul>
-        </div>
-        <div class="col-md">
-          <h6><b>Company</b></h6>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white textdec small-link">About Us</a></li>
-            <li><a href="#" class="text-white textdec small-link">Blog</a></li>
-            <li><a href="#" class="text-white textdec small-link">Careers</a></li>
-            <li><a href="#" class="text-white textdec small-link">PointMAX</a></li>
-          </ul>
-        </div>
-        <div class="col-md">
-          <h6><b>Destination</b></h6>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white textdec small-link">Cities</a></li>
-            <li><a href="#" class="text-white textdec small-link">Spiritual places </a></li>
-            <li><a href="#" class="text-white textdec small-link">Hill Stations</a></li>
-            <li><a href="#" class="text-white textdec small-link">Solo Travel places</a></li>
-          </ul>
-        </div>
-        <div class="col-md">
-          <h6><b>Social Networks</b></h6>
-          <ul class="list-unstyled d-flex p-2">
-            <li><a href="#"><img src="assets/img/footer social meadia icons/Frame 406.png" alt="Facebook"
-                  class="rounded-pill"></a></li>
-            <li><a href="#"><img src="assets/img/footer social meadia icons/Frame 407.png" alt="Twitter"
-                  class="rounded-pill"></a></li>
-            <li><a href="#"><img src="assets/img/footer social meadia icons/Frame 408.png" alt="Instagram"
-                  class="rounded-pill"></a></li>
-            <li><a href="#"><img src="assets/img/footer social meadia icons/Frame 410.png" alt="Instagram"
-                  class="rounded-pill"></a></li>
-            <li><a href="#"><img src="assets/img/footer social meadia icons/Frame 409.png" alt="Instagram"
-                  class="rounded-pill"></a></li>
-          </ul>
-        </div>
+          <div class="col-6 col-sm-3 col-lg-2 mb-4">
+              <h6><b>Help</b></h6>
+              <ul class="list-unstyled">
+                  <li><a href="#" class="text-white textdec small-link">FAQ</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Privacy policy</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Cookies privacy</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Terms of use</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Help centre</a></li>
+              </ul>
+          </div>
+          <div class="col-6 col-sm-3 col-lg-2 mb-4">
+              <h6><b>Get the App</b></h6>
+              <ul class="list-unstyled">
+                  <li><a href="#" class="text-white textdec small-link">IOS app</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Android app</a></li>
+              </ul>
+          </div>
+          <div class="col-6 col-sm-3 col-lg-2 mb-4">
+              <h6><b>Company</b></h6>
+              <ul class="list-unstyled">
+                  <li><a href="#" class="text-white textdec small-link">About Us</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Blog</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Careers</a></li>
+                  <li><a href="#" class="text-white textdec small-link">PointMAX</a></li>
+              </ul>
+          </div>
+          <div class="col-6 col-sm-3 col-lg-2 mb-4">
+              <h6><b>Destination</b></h6>
+              <ul class="list-unstyled">
+                  <li><a href="#" class="text-white textdec small-link">Cities</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Spiritual places</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Hill Stations</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Solo Travel places</a></li>
+              </ul>
+          </div>
+          <div class="col-12 col-lg-4 mb-4">
+              <h6 class="d-flex justify-content-center"><b>Social Networks</b></h6>
+              <ul class="list-unstyled d-flex justify-content-center p-2">
+                  <li class="me-2"><a href="#"><img src="assets/img/footer social meadia icons/Frame 406.png" alt="Facebook" class="rounded-pill"></a></li>
+                  <li class="me-2"><a href="#"><img src="assets/img/footer social meadia icons/Frame 407.png" alt="Twitter" class="rounded-pill"></a></li>
+                  <li class="me-2"><a href="#"><img src="assets/img/footer social meadia icons/Frame 408.png" alt="Instagram" class="rounded-pill"></a></li>
+                  <li class="me-2"><a href="#"><img src="assets/img/footer social meadia icons/Frame 410.png" alt="Instagram" class="rounded-pill"></a></li>
+                  <li class="me-2"><a href="#"><img src="assets/img/footer social meadia icons/Frame 409.png" alt="Instagram" class="rounded-pill"></a></li>
+              </ul>
+          </div>
       </div>
-    </div>
-    <div class="horizantal-line">
-
-    </div>
-    <h6 class="text-end mx-5 pt-3">&copy; 2023 Y.SPOT Rooms pvt .ltd.</h6>
+  </div>
+  <div class="horizontal-line bg-white my-3" style="height: 1px;"></div>
+  <h6 class="text-center mx-5 pt-3">&copy; 2023 Y.SPOT Rooms pvt .ltd.</h6>
+  
+  <style>
+    .textdec {
+      text-decoration: none;
+    }
+    .small-link {
+      font-size: 0.9rem;
+    }
+    .horizontal-line {
+      background-color: white;
+    }
+  </style>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
